Wed May  5 22:30:44 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* Kokyu/tests/DSRT_MIF/MIF.cpp:
	* examples/Bounded_Packet_Relay/Thread_Bounded_Packet_Relay.cpp:
	* examples/Smart_Pointers/widget_test.cpp:
	* performance-tests/Synch-Benchmarks/Base_Test/mutex_test.cpp: 

	  Include appropriate headers to fix undefined type compile-time
	  errors.

Wed May  5 16:34:13 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/CDR_Base.h (ACE_CDR):

	  Improved doxygen documentation of basic CDR/IDL types.

	  (ACE_CDR::Boolean):

	  Versions of GNU G++ less than version 3.0 defined a pre-C99 bool
	  type that was an enumeration.  In some cases the enumeration
	  could be promoted to an int, causing a potential problem where a
	  4 byte integer (for example) could be selected when attempting
	  to send a boolean over a CDR stream.

Wed May  5 18:10:32 2004  Steve Huston  <shuston@riverace.com>

	* examples/IPC_SAP/SSL_SAP/SSL-server-poll.cpp: Change #include
	  <stdio.h> to "ace/OS_NS_stdio.h" since ACE_OS::fprintf() is used.

Wed May  5 14:14:53 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Future.h (ACE_Future_Rep):
	* ace/Map_Manager.h (ACE_Map_Manager):
	* ace/Refcounted_Auto_Ptr.h:

	  Declare lock members as "mutable" to avoid using a
	  const_cast<> hack in const methods that modify the lock
	  member through an ACE_GUARD.

	* ace/Future.cpp (get):
	* ace/Map_Manager.i (current_size, total_size):
	* ace/Refcounted_Auto_Ptr.i:

	  Removed const_cast<> around lock member.  It is no longer
	  needed since the lock member is now declared "mutable".

	* ace/CDR_Stream.h:

	  Minor Doxygen documentation update.

	* ace/ACE.cpp:
	* ace/ARGV.cpp:
	* ace/ARGV.i:
	* ace/ATM_Acceptor.cpp:
	* ace/ATM_Connector.cpp:
	* ace/ATM_Stream.cpp:
	* ace/Acceptor.cpp:
	* ace/Activation_Queue.cpp:
	* ace/Arg_Shifter.cpp:
	* ace/Asynch_Acceptor.cpp:
	* ace/Asynch_Connector.cpp:
	* ace/Asynch_IO.cpp:
	* ace/Atomic_Op.cpp:
	* ace/Atomic_Op.i: