@@ -59,7 +59,7 @@ public:
     }
 
 private:
-  ACE_Atomic_Op <ACE_Thread_Mutex, int> count_;
+  ACE_Atomic_Op <ACE_SYNCH_MUTEX, int> count_;
   // Number of the timer event.
 
   ACE_Time_Value start_time_;
@@ -117,11 +117,11 @@ ACE_TMAIN (int, ACE_TCHAR *[])
 }
 
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
-template class ACE_Atomic_Op<ACE_Thread_Mutex, int>;
-template class ACE_Atomic_Op_Ex<ACE_Thread_Mutex, int>;
+template class ACE_Atomic_Op<ACE_SYNCH_MUTEX, int>;
+template class ACE_Atomic_Op_Ex<ACE_SYNCH_MUTEX, int>;
 #elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
-#pragma instantiate ACE_Atomic_Op<ACE_Thread_Mutex, int>
-#pragma instantiate ACE_Atomic_Op_Ex<ACE_Thread_Mutex, int>
+#pragma instantiate ACE_Atomic_Op<ACE_SYNCH_MUTEX, int>
+#pragma instantiate ACE_Atomic_Op_Ex<ACE_SYNCH_MUTEX, int>
 #endif /* ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
 
 #else /* ACE_WIN32 && !ACE_HAS_WINCE || ACE_HAS_AIO_CALLS && !ACE_POSIX_AIOCB_PROACTOR*/
