@@ -1,12 +1,21 @@
 Wed May  5 22:30:44 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* Kokyu/tests/DSRT_MIF/MIF.cpp:
+	* apps/JAWS3/jaws3/Concurrency.h:
 	* examples/Bounded_Packet_Relay/Thread_Bounded_Packet_Relay.cpp:
 	* examples/Smart_Pointers/widget_test.cpp:
-	* performance-tests/Synch-Benchmarks/Base_Test/mutex_test.cpp: 
+	* performance-tests/Server_Concurrency/Leader_Follower/leader_follower.cpp:
+	* performance-tests/Server_Concurrency/Queue_Based_Workers/workers.cpp:
+	* performance-tests/Synch-Benchmarks/Base_Test/mutex_test.cpp:
 
 	  Include appropriate headers to fix undefined type compile-time
 	  errors.
+
+	* examples/Reactor/Proactor/test_timeout.cpp:
+
+	  Changed ACE_Atomic_Op<> lock template parameter from
+	  ACE_Thread_Mutex to ACE_SYNCH_MUTEX.  Allows this file to build
+	  in single threaded builds.
 
 Wed May  5 16:34:13 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
